fullSandbox11072023/force-app/main/default/objects/EMTemplateDetail__c/EMTemplateDetail__c.object-meta.xml
<CustomObject>
    <description>Object to hold details related to email template and additionally have merge fields created to accept input fields from user interface.</description>
    <label>EMTemplateDetail</label>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>EM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMTemplateDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>