fullSandbox11072023/force-app/main/default/objects/EMTemplateDetail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EMTemplateDetails</relationshipLabel>
    <relationshipName>EMTemplateDetails</relationshipName>
    <type>Lookup</type>
</CustomField>