fullSandbox11072023/force-app/main/default/objects/EMTemplateDetail__c/fields/Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Time__c</fullName>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>