fullSandbox11072023/force-app/main/default/objects/EMTemplateDetail__c/fields/Event_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Event_Presenter__c</fullName>
    <label>Event Presenter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>