fullSandbox11072023/force-app/main/default/objects/EMTemplateDetail__c/fields/Link_One__c.field-meta.xml
<CustomField>
    <fullName>Link_One__c</fullName>
    <label>Link One</label>
    <type>Url</type>
</CustomField>