fullSandbox11072023/force-app/main/default/objects/EMTemplateDetail__c/fields/Link_Two__c.field-meta.xml
<CustomField>
    <fullName>Link_Two__c</fullName>
    <label>Link Two</label>
    <type>Url</type>
</CustomField>